# ChangeLog for x11-misc/x11vnc
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.118 2015/04/08 04:57:29 jer Exp $

  08 Apr 2015; Jeroen Roovers <jer@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  Stable for HPPA (bug #518214).

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  add arm64 support, tested on A53 board

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

  04 Oct 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  x11vnc-0.9.13-r1.ebuild:
  Keyword ~mips

  29 Aug 2014; Chema Alonso <nimiux@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  Stable for amd64 wrt bug #518214

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  x86 stable wrt bug #518214

  22 Jan 2014; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Added proxy maintainers herd.

  22 Jan 2014; Julian Ospald <hasufell@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  EAPI bump, cosmetic stuff

  22 Jan 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  take over maintainership with Alex Xu as proxy

  22 Jan 2014; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Remove myself.

  01 Oct 2013; Mike Frysinger <vapier@gentoo.org>
  files/x11vnc-0.9.13-shm-cleanup.patch:
  Update ChromiumOS URL.

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> x11vnc-0.9.13-r1.ebuild:
  Add ~arm-linux keyword.

  21 Jan 2013; Mike Frysinger <vapier@gentoo.org> x11vnc-0.9.13-r1.ebuild,
  x11vnc-0.9.13.ebuild:
  Add s390 keywords #453114 by Sergey Popov.

  20 Jan 2013; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Add myself to metadata.

  20 Jan 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #53266

  25 Nov 2012; Sven Wegener <swegener@gentoo.org> -x11vnc-0.9.9.ebuild,
  -files/x11vnc-0.9.11-rename-pointer.patch, -x11vnc-0.9.12.ebuild,
  -files/x11vnc-0.9.12-warnings.patch:
  Cleanup.

*x11vnc-0.9.13-r1 (15 Nov 2012)
