@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure prepare
+DEPEND=x11-libs/libX11 x11-libs/libXdamage x11-libs/libXext x11-libs/libXfixes x11-libs/libXrandr >=x11-libs/libXtst-1.1.0 avahi? ( >=net-dns/avahi-0.6.4 ) ssl? ( dev-libs/openssl:= ) >=net-libs/libvncserver-0.9.8 xinerama? ( x11-libs/libXinerama ) x11-libs/libXt x11-proto/inputproto x11-proto/trapproto x11-proto/recordproto x11-proto/xproto x11-proto/xextproto xinerama? ( x11-proto/xineramaproto ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=A VNC server for real X displays
+EAPI=5
+HOMEPAGE=http://www.karlrunge.com/x11vnc/
+IUSE=avahi crypt fbcon ssl xinerama
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~sparc-solaris ~x64-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=x11-libs/libX11 x11-libs/libXdamage x11-libs/libXext x11-libs/libXfixes x11-libs/libXrandr >=x11-libs/libXtst-1.1.0 avahi? ( >=net-dns/avahi-0.6.4 ) ssl? ( dev-libs/openssl:= ) >=net-libs/libvncserver-0.9.8 xinerama? ( x11-libs/libXinerama )
+SLOT=0
+SRC_URI=https://github.com/LibVNC/x11vnc/archive/82eb9752485db87c9c6d3d6bb4aa1ae7ac81174a.zip
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=438230f2d2cad16e78565de85b8ab14e
