@@ -3,15 +3,17 @@ Hash: SHA256
 
 AUX x11vnc-0.9.13-shm-cleanup.patch 1262 SHA256 2e69b15f9d3a466181cef7ef0e5963449d4fdc473c9933d4349ddf37a6ae3521 SHA512 fe63d11e1f81861438b9d6469cbe6545c5351a5791f8d2ac4367fb540ade1e53e51cad8369316f95bd27db47d11b8e925bedf9941128133398d2bedbb61d2946 WHIRLPOOL 35467350663485c803287da7c467652bd096b88434ae2cefaa9a9af4683531a9a2102687e48a95c3f2285758140e78461036273eb2f686718fc6486e691338ed
 AUX x11vnc-0.9.13-warnings.patch 1363 SHA256 4db7b0b699e009362eaef6be222041cc333541273cf47db52dc71e521a0c4ffe SHA512 42de5aaa3f5f67f3f7f0b8af693811d6070bb05270a3b41e88705c09e436e37beb343433d5a4cd2d6922f2eb7e67c1584de1278b0ed0f92b3d01f2f233050ab1 WHIRLPOOL 408f7e7f887703aae39c9ffff70cdb7334cbb9d410d80d9b36c9cdfbef0aeaca8ff1dc1d53fb7c1f53c37cb90959b3e8815d5dc077eadf66deea5bb799ff8de7
+DIST 82eb9752485db87c9c6d3d6bb4aa1ae7ac81174a.zip 1830730 SHA256 fc6a28df089e47b68931019ce038b6e2fcd78e93de7f6984a22262252d01c16f SHA512 0fa4f7b52442793ec1bd82c74f9d092c69262e4f1fa93584fef17bbe0e5cbde08bc5ad0924631801bb43b41d90c37077a317c61511553f98698096eab05791eb WHIRLPOOL f1a45b549fb6ff9bea2eb4e3719b5dd43a78f6f418c61691cebab313d56761147d928648e103c654309575bec7c716a6f1cd1ef7a9b484c09edee37233cb0ce7
 DIST x11vnc-0.9.13.tar.gz 2853769 SHA256 f6829f2e629667a5284de62b080b13126a0736499fe47cdb447aedb07a59f13b SHA512 7b24e495f29122032e1c8ced7f7d8e0a56a2a8263e761a50725320742c99a0fcd5680d13038dd5d47e1c05d3b889d0caa13ba0b1aeda6fa42d5fb5ef3c43f908 WHIRLPOOL d812b257e70d6caccc6669c7fca89cacc590b5908c7877f62bdd14a159b0712b5b60e8587b6a385a5a68c46e15296ab838b07196786ac354fccb0759725685c4
 EBUILD x11vnc-0.9.13-r1.ebuild 2102 SHA256 8014ee0fcf38aade53a65b15b59eafcc87765c2b31c419cdd390d3a43571c8a4 SHA512 39888991c74e73550aadf3b96ae3e659e700f94945ae26101b0e198392ae5e44ecd67755e22a63e5720eaaadedc0f0143342c2f39dd6f927d8d43902b26b168d WHIRLPOOL 990ca1066f256186c80f42df18aca7bf28d74c05b0a620e2a711078d52f9cce4c6e9a2a4e0b004c38073ebca6cc8ee5be50aed1702c843d14463ee59ec75ff46
 EBUILD x11vnc-0.9.13.ebuild 2047 SHA256 82a2e0167e43ab2947fa8314e7165f93475b8b27fa4b9b50c4f2fbf0a9ed9a63 SHA512 8445604f172f4650118d3514f619529eed39576fc1fc4393b118025c1eff98b56ec55718de76f445c4b5ac32915291ae4ea7171bf4e7871d1131d8a06116d9ae WHIRLPOOL 6c1381128ee558b796ac512b1d284e2480e5d84e929a856e9984fb2f98a965d23f2aed22743b93f47b1d06e68ce109c743831bd1b6893373b65fd02fd5ba8cf0
-MISC ChangeLog 15580 SHA256 892aad4eedf7500c7cabfb2a2af867b0a9f1618248e48cd846ba35bb7728429e SHA512 011df5961a6988d8bb3b85b1eade98ed76d2a9373f6366a120266f7ee1527b42cc12a95bbe6d1421b23b1a1d1395794bcc7e28cb44e93d32b86e9bfc0c76de5c WHIRLPOOL 536bbb70cd2b2212d9fdfe425231945d8bd410192e38d654e1b365f91165f71e9ec4a23260ff17a35d9e06f14ebab1278c71291935f7598d99a5417a916cf8d8
+EBUILD x11vnc-0.9.13_p20150111.ebuild 1531 SHA256 7adbf91db9247c00e169153d793dc29abec2621ab0eb962bc52d23421e8d16c6 SHA512 ce34b0b0d689a577664c907b418349c39d0a696ac951eb0fcdf5bc6b60e26dd8a9d95a21c3355a71178850570fa024eabd6f370cf88ae9b522bc66d196232b53 WHIRLPOOL 1c23659545abfce58649a3d24bfcd82c983104ea31f336f2e7c02d63df4f9f4e91caaca883bc7b803da1beafa8de3f3e4ae6de47621c245ec6ce606ff55aaafc
+MISC ChangeLog 15744 SHA256 bb2a3135486fb1c32b1e769f23cdf5721285338915c4cc066e882c3430f1e9fa SHA512 31d7d65619a2d015d4e13ece6edff07bc029d695efc9386e029e77f58c8a9992de1a0505dd38b49e2fedc35e73d223df15f1eb48bd0e83893dda8dc3b0f5c724 WHIRLPOOL ac5554e2f2ebbceaa2601d738c77ea67e2d3ac10bbeff20107dc82192418221dd53365acaa60f53ccbb63696d0994349685602af587b0cafa438e67982a7ae51
 MISC metadata.xml 705 SHA256 fac045cd46b98cd7457218dde42e78fb61cbce342a6e08b9eabc862594da4f80 SHA512 9e2d5e5e2ead1464be5495d2380bb9aab20570e97d13db7225bf06b08144260db6f0ac3f4541ab18aa484405a961ebeff2a329027da02d72206a41f318f964bb WHIRLPOOL a0bafc9ff691d9dc2e31aeeb2707fdc9944b351e69d7a6b901017996f813a6896ebc47eb37621a9f63edcc74b4b6264611edb2321d28d3b2828d605637d40f70
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUktTsACgkQVWmRsqeSphOVcwCfU0dAPLMjnne36n64bxcsVCkW
-pu4An3Embn1LJ/HGZ3prtq3DEcnKdHn6
-=0Z4Y
+iEYEAREIAAYFAlU5kgEACgkQso7CE7gHKw3D2gCeLfweExPJrCKQFxUe5QsL8PRx
++OgAnRQEymRcB8TInmUSasaAOdccf7LX
+=cijA
 -----END PGP SIGNATURE-----
