@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/x11vnc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.118 2015/04/08 04:57:29 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/x11vnc/ChangeLog,v 1.119 2015/04/24 00:44:27 idella4 Exp $
+
+*x11vnc-0.9.13_p20150111 (24 Apr 2015)
+
+  24 Apr 2015; Ian Delaney <idella4@gentoo.org> +x11vnc-0.9.13_p20150111.ebuild:
+  bump wrt bug #515268, runtests fine
 
   08 Apr 2015; Jeroen Roovers <jer@gentoo.org> x11vnc-0.9.13-r1.ebuild:
   Stable for HPPA (bug #518214).
